# pypi-test-first

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/pypi_test_first/: __init__.py
